@@ -869,15 +869,20 @@ function boost_process_local_data_ids($last_id, $child, $rrdtool_pipe) {
 				$vals_in_buffer++;
 			} elseif (strlen($value)) {
 				/* break out multiple value output to an array */
-				$values = explode(' ', $value);
+				$values = preg_split('/\s+/', $value);
 
 				if (!$multi_vals_set) {
-					$rrd_field_names = array_rekey(db_fetch_assoc('SELECT
-						data_template_rrd.data_source_name,
-						data_input_fields.data_name
-						FROM (data_template_rrd,data_input_fields)
-						WHERE data_template_rrd.data_input_field_id=data_input_fields.id
-						AND data_template_rrd.local_data_id=' . $item['local_data_id']), 'data_name', 'data_source_name');
+					$rrd_field_names = array_rekey(
+						db_fetch_assoc_prepared('SELECT DISTINCT dtr.data_source_name, dif.data_name
+							FROM graph_templates_item AS gti
+							INNER JOIN data_template_rrd AS dtr
+							ON gti.task_item_id = dtr.id
+							INNER JOIN data_input_fields AS dif
+							ON dtr.data_input_field_id = dif.id
+							AND dtr.local_data_id = ?',
+							array($item['local_data_id'])),
+						'data_name', 'data_source_name'
+					);
 
 					$rrd_tmpl = '';
 				}
@@ -885,9 +890,11 @@ function boost_process_local_data_ids($last_id, $child, $rrdtool_pipe) {
 				$first_tmpl = true;
 				$multi_ok   = false;
 
-				for ($i=0; $i < count($values); $i++) {
-					if (preg_match('/^([a-zA-Z0-9_\.-]+):([eE0-9Uu\+\.-]+)$/', $values[$i], $matches)) {
-						if (isset($rrd_field_names[$matches[1]])) {
+				if (cacti_sizeof($values)) {
+					foreach($values as $value) {
+						$matches = explode(':', $value);
+
+						if (isset($rrd_field_names[$matches[0]])) {
 							$multi_ok = true;
 
 							if (trim(read_config_option('path_boost_log')) != '') {
@@ -899,19 +906,18 @@ function boost_process_local_data_ids($last_id, $child, $rrdtool_pipe) {
 									$rrd_tmpl .= ':';
 								}
 
-								$rrd_tmpl .= $rrd_field_names[$matches[1]];
+								$rrd_tmpl .= $rrd_field_names[$matches[0]];
 								$first_tmpl = false;
 							}
 
-							if (is_numeric($matches[2]) || ($matches[2] == 'U')) {
-								$tv_tmpl[$rrd_field_names[$matches[1]]] = $matches[2];
-								$buflen += strlen(':' . $matches[2]);
-							} elseif ((function_exists('is_hexadecimal')) && (is_hexadecimal($matches[2]))) {
-								$tval                                   = hexdec($matches[2]);
-								$tv_tmpl[$rrd_field_names[$matches[1]]] = $tval;
+							if (is_numeric($matches[1]) || ($matches[1] == 'U')) {
+								$tv_tmpl[$rrd_field_names[$matches[0]]] = $matches[1];
+								$buflen += strlen(':' . $matches[1]);
+							} elseif ((function_exists('is_hexadecimal')) && (is_hexadecimal($matches[1]))) {
+								$tv_tmpl[$rrd_field_names[$matches[0]]] = hexdec($matches[1]);
 								$buflen += strlen(':' . $tval);
 							} else {
-								$tv_tmpl[$rrd_field_names[$matches[1]]] = 'U';
+								$tv_tmpl[$rrd_field_names[$matches[0]]] = 'U';
 								$buflen += 2;
 							}
 						}
